force-app/main/default/objects/Contact/fields/No_of_Adults__c.field-meta.xml
<CustomField>
    <fullName>No_of_Adults__c</fullName>
    <description>Number of adults in this family</description>
    <inlineHelpText>Enter number of adults for this family member</inlineHelpText>
    <label>No of Adults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>