force-app/main/default/objects/Contact/fields/No_of_Children__c.field-meta.xml
<CustomField>
    <fullName>No_of_Children__c</fullName>
    <description>Number of children for this family member</description>
    <inlineHelpText>Enter number of children for this family member</inlineHelpText>
    <label>No of Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>