force-app/main/default/objects/Contact/fields/Occupation_Description__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Description__c</fullName>
    <label>Occupation Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>