force-app/main/default/objects/Contact/fields/Occupation_List__c.field-meta.xml
<CustomField>
    <fullName>Occupation_List__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retiree</fullName>
            </value>
            <value>
                <fullName>Legislators, senior officials and managers</fullName>
            </value>
            <value>
                <fullName>Professionals</fullName>
            </value>
            <value>
                <fullName>Associate professionals and technicians</fullName>
            </value>
            <value>
                <fullName>Clerical support workers</fullName>
            </value>
            <value>
                <fullName>Service and sales workers</fullName>
            </value>
            <value>
                <fullName>Agricultural and fishery workers</fullName>
            </value>
            <value>
                <fullName>Pland and machine operators and assemblers</fullName>
            </value>
            <value>
                <fullName>Cleaners, labourers and related workers</fullName>
            </value>
            <value>
                <fullName>Workers not elsewhere classified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>