force-app/main/default/objects/Contact/fields/Office_Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone_no__c</fullName>
    <label>Office Phone no</label>
    <type>Phone</type>
</CustomField>