force-app/main/default/objects/Contact/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>