force-app/main/default/objects/Contact/fields/Orientation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Completed</label>
    <type>Checkbox</type>
</CustomField>