force-app/main/default/objects/Contact/fields/Orientation_Created__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Created</label>
    <type>Checkbox</type>
</CustomField>