force-app/main/default/objects/Contact/fields/Original_Date_Time_Joined__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_Time_Joined__c</fullName>
    <label>Original Date/Time Joined</label>
    <type>DateTime</type>
</CustomField>