force-app/main/default/objects/Contact/fields/Other_Organization_Volunteered__c.field-meta.xml
<CustomField>
    <fullName>Other_Organization_Volunteered__c</fullName>
    <label>Other Organization Volunteered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>