force-app/main/default/objects/Contact/fields/Other_Organization_Volunteered_Period__c.field-meta.xml
<CustomField>
    <fullName>Other_Organization_Volunteered_Period__c</fullName>
    <label>Other Organization Volunteered Period</label>
    <length>200</length>
    <type>Text</type>
</CustomField>