force-app/main/default/objects/Contact/fields/Other_Reason_For_Termination__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_For_Termination__c</fullName>
    <label>Other Reason For Termination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>