force-app/main/default/objects/Contact/fields/Own_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Own_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Vehicle</label>
    <type>Checkbox</type>
</CustomField>