force-app/main/default/objects/Contact/fields/Parent_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact_No__c</fullName>
    <label>Parent Contact No</label>
    <type>Phone</type>
</CustomField>