force-app/main/default/objects/Contact/fields/PDPA_Signed__c.field-meta.xml
<CustomField>
    <fullName>PDPA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDPA Signed</label>
    <type>Checkbox</type>
</CustomField>