force-app/main/default/objects/Contact/fields/Percentage_Completion__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Completion__c</fullName>
    <label>Percentage Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>