force-app/main/default/objects/Contact/fields/Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_ID__c</fullName>
    <displayFormat>P{yy}{mm}-{00000}</displayFormat>
    <label>Person ID</label>
    <type>AutoNumber</type>
</CustomField>