force-app/main/default/objects/Contact/fields/Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Access</label>
    <type>Checkbox</type>
</CustomField>