force-app/main/default/objects/Contact/fields/Portal_Password__c.field-meta.xml
<CustomField>
    <fullName>Portal_Password__c</fullName>
    <label>Portal Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>