force-app/main/default/objects/Contact/fields/Preferred_Programmes__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Programmes__c</fullName>
    <label>Preferred Programmes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative support at NKF Centre</fullName>
            </value>
            <value>
                <fullName>Befriending Programme</fullName>
            </value>
            <value>
                <fullName>Enrichment Programme</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Grains of Hope Programme</fullName>
            </value>
            <value>
                <fullName>Home Aid (House Painting &amp; House Cleaning)</fullName>
            </value>
            <value>
                <fullName>Kidney Discovery CentreGuide</fullName>
            </value>
            <value>
                <fullName>Orientation Officer</fullName>
            </value>
            <value>
                <fullName>Patient Escort</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Professional Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>