force-app/main/default/objects/Contact/fields/Previous_Volunteer_Period1__c.field-meta.xml
<CustomField>
    <fullName>Previous_Volunteer_Period1__c</fullName>
    <label>Previous Volunteer Period</label>
    <type>Date</type>
</CustomField>