force-app/main/default/objects/Contact/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=100x100&amp;data=https://ap8.salesforce.com/apex/Worksheet?Id=&quot;+Id,&quot;QR code&quot;)</description>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=100x100&amp;data=https://ap8.salesforce.com/&quot;+Id,&quot;QR code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>