force-app/main/default/objects/Contact/fields/QR_Code_Link__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Link__c</fullName>
    <formula>&quot;https://api.qrserver.com/v1/create-qr-code/?size=100x100&amp;data=https://ap8.salesforce.com/&quot;+Id</formula>
    <label>QR Code Link</label>
    <type>Text</type>
</CustomField>