force-app/main/default/objects/Contact/fields/Reason_for_Rejection_Termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection_Termination__c</fullName>
    <label>Reason for Rejection/Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Language incompatibility</fullName>
            </value>
            <value>
                <fullName>Mismatch of intent</fullName>
            </value>
            <value>
                <fullName>Criminal record</fullName>
            </value>
            <value>
                <fullName>Health issues</fullName>
            </value>
            <value>
                <fullName>Incompatible volunteering schedule</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>