force-app/main/default/objects/Contact/fields/Reason_of_Declined__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Declined__c</fullName>
    <label>Reason of Declined</label>
    <length>100</length>
    <type>Text</type>
</CustomField>