force-app/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buddhism</fullName>
            </value>
            <value>
                <fullName>Catholicism</fullName>
            </value>
            <value>
                <fullName>Christianity</fullName>
            </value>
            <value>
                <fullName>Hinduism</fullName>
            </value>
            <value>
                <fullName>Islam</fullName>
            </value>
            <value>
                <fullName>No religion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sikhism</fullName>
            </value>
            <value>
                <fullName>Taoism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>