force-app/main/default/objects/Contact/fields/Send_Password__c.field-meta.xml
<CustomField>
    <fullName>Send_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Password</label>
    <type>Checkbox</type>
</CustomField>