force-app/main/default/objects/Contact/fields/Signup_Link__c.field-meta.xml
<CustomField>
    <fullName>Signup_Link__c</fullName>
    <label>Signup Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>