force-app/main/default/objects/Contact/fields/Special_skills__c.field-meta.xml
<CustomField>
    <fullName>Special_skills__c</fullName>
    <label>Special skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Playing Musical Instruments</fullName>
            </value>
            <value>
                <fullName>Videography</fullName>
            </value>
            <value>
                <fullName>Hair Styling/Cutting</fullName>
            </value>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>Class 3 - Driving</fullName>
            </value>
            <value>
                <fullName>Graphics Design</fullName>
            </value>
            <value>
                <fullName>Food Handling</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Vocational Skills</fullName>
            </value>
            <value>
                <fullName>Class 3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>