force-app/main/default/objects/Contact/fields/Spoken_Languages_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Spoken_Languages_If_Others__c</fullName>
    <label>Spoken Languages (If Others)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>