force-app/main/default/objects/Contact/fields/Tax_Recipient_ID_No_Org__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_ID_No_Org__c</fullName>
    <label>Tax Recipient ID No (Org)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>