force-app/main/default/objects/Contact/fields/Tax_Recipient_Id_Type_Org__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_Id_Type_Org__c</fullName>
    <label>Tax Recipient Id Type (Org)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>UEN</fullName>
            </value>
            <value>
                <fullName>UEN-Business</fullName>
            </value>
            <value>
                <fullName>UEN-Local Company</fullName>
            </value>
            <value>
                <fullName>UEN-Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>