force-app/main/default/objects/Contact/fields/Total_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Amount__c</fullName>
    <description>This is summed by trigger every time a donation record is cleared or received</description>
    <label>Total Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>