force-app/main/default/objects/Contact/fields/Total_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Income__c</fullName>
    <label>Total Monthly Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>