force-app/main/default/objects/Contact/fields/Total_Volunteering_Hour__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteering_Hour__c</fullName>
    <formula>Total_Volunteering_Hours__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Volunteering Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>