force-app/main/default/objects/Contact/fields/Total_Volunteering_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteering_Hours__c</fullName>
    <label>Total Volunteering Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>