force-app/main/default/objects/Contact/fields/TotDonAmt__c.field-meta.xml
<CustomField>
    <fullName>TotDonAmt__c</fullName>
    <description>This is summed by trigger every time a donation record is cleared</description>
    <label>Total Donation Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>