force-app/main/default/objects/Contact/fields/VA_Ad_hoc__c.field-meta.xml
<CustomField>
    <fullName>VA_Ad_hoc__c</fullName>
    <label>VA.(Ad hoc)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>